# fimm

./: README.md  pyproject.toml
src/fimm/: train.py
src/fimm/finetuning/: utils.py
src/fimm/finetuning/strategies/normalization/: __init__.py
src/fimm/finetuning/strategies/regularization/: delta.py
