[project]
name = "fimm"
version = "0.0.3"
description = "Finetune PyTorch Image Models with TIMM"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["Machine Learning", "Deep Learning", "Image", "Fine-Tuning"]
authors = [
  { name = "Ivo Rapant", email = "rapanti@cs.uni-freiburg.de" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = ["timm"]

[project.urls]
"Homepage" = "https://github.com/rapanti/fimm"
"Bug Reports" = "https://github.com/rapanti/fimm/issues"
"Source" = "https://github.com/rapanti/fimm"

[project.scripts]
train = "fimm.train:main"
validate = "fimm.validate:main"
